--- a/static/css/privious11.25/header.css
+++ b/static/css/privious11.25/header.css
@@ -8,6 +8,10 @@
   margin-right:auto;
   text-align:left;
 }
+#base {
+  position:absolute;
+  z-index:0;
+}
 #header{
   position:relative;
 }
@@ -254,23 +258,15 @@ ul{
   visibility: hidden;
   position:fixed;
   left:50%;
-  margin-left:-210px;
-  top:50%;
-  margin-top:-121px;
-  z-index: 12;
-}
-#Face_login_bgd {
-  visibility: hidden;
-  position:fixed;
-  left:50%;
   margin-left:-260px;
   top:50%;
   margin-top:-171px;
-  width:520px;
-  height:342px;
-  z-index: 11;
+  z-index: 15;
 }
-#Face_login_bgd_img {
+#Face_login_bgd {
+  position:absolute;
+  left:0px;
+  top:0px;
   width:520px;
   height:342px;
 }
@@ -281,32 +277,20 @@ ul{
   width:40px;
   height:40px;
 }
-#webcam{ 
-  float: left; 
-}
-#face_email_txt {
-  position: absolute;
-  top: 50px;
-  left: 330px;
-  width: 200px;
-  font-weight:150;
-  font-style:normal;
-  font-size:16px;
-}
-#username {
-  position: absolute;
-  top: 100px;
-  left: 330px;
-}
-#capture_btn {
-  position: absolute;
-  top: 150px;
-  left: 380px;
-}
 #Face_login_button {
-  position: absolute;
-  top:200px;
-  left: 350px;
+  position:absolute;
+  background-color: #FFFFFF;
+  left:250px;
+  top:150px;
+  width:40px;
+  height:16px;
+}
+#Face_login_txt {
+  position:absolute;
+  left:150px;
+  top:220px;
+  width:235px;
+  height:13px;
 }
 #forget_txt{
   position: absolute;
